HISTORY
=======

  * 0.3.6-generic:

  * 0.3.5-generic:

    Features:

      - Silva Service Polls MySQL now also has the store cookie feature

    Bugs fixed:

      - Singular Plural of votes for results.

  * 0.3.4-generic:

    Features:

      - No answers selected when starting the Silva Poll

      - Message when no answer is selected

  * 0.3.3-generic:

    Changes:
      - votes are now on the same line between ()'s

    Features:

      - tableless

      - turn of cookies option

    Improvements:

      - code clean up

      - better compliancy

      - more generic

      - updated documentation

  * 0.3.1 from silva poll:

    Bugs fixed:

      - Fixed JS error in public view.

      - Fixed bookmark text.

      - Made public views not get cached anymore.

      - Fixed i18n initialization.

  * 0.3:

    Bugs fixed:

      - Error page was displayed when trying to add Poll Question with
        duplicate id.

      - Fixed problem that made that the publically viewable version was
        used to get data from in preview screens (which could result in errors
        if no public version was available).

      - Fixed attribute errors on 'day' in preview.

    Features added:

      - There's now a restriction on the amount of answers one can save:
        the maximum allowed number of answers is 20.

  * 0.2:

    Bugs fixed:

    Features added:

      - Cosmetic fixes.