@@ -8,14 +8,14 @@ Meta
 Copyright (c) 2006-2007 Infrae. All rights reserved.
 See also LICENSE.txt
 
-Valid for:  SilvaPoll 0.3.x-generic
+Valid for:  SilvaPoll 0.4.x-generic
 Authors:    Guido Wesdorp, Wim Boucquaert, Jasper Op De Coul
 Email:      guido@infrae.com, wim@infrae.com, jasper@infrae.com
 
 Prerequisities
 --------------
 
-SilvaPoll 0.3 requires a working Silva 1.5.x installation, with
+SilvaPoll 0.4 requires a working Silva 2.0.x installation, with
 SilvaExternalSources installed properly. If you want to use the MySQL service
 for storing poll data, a recent MySQL database and the zMySQLDA product should
 be installed, too.
@@ -23,7 +23,7 @@ be installed, too.
 Basic installation instructions
 -------------------------------
 
-Unpack the SilvaPoll-0.3.x-generic.tar.gz tarball in the Products directory of your
+Unpack the SilvaPoll-0.4.x-generic.tar.gz tarball in the Products directory of your
 Zope instance. Restart Zope. Go to 'service_extensions' in your Silva root
 (for Silva installation instructions, see Silva/INSTALL.txt), make sure that
 the SilvaExternalSource package has been installed properly (if the box is
