@@ -2,10 +2,9 @@
 
     from Products.SilvaPoll.i18n import translate as _
 
-and will provide a MessageIDFactory that returns MessageIDs for
+and will provide a MessageFactory that returns Messages for
 i18n'ing Product code and Python scripts.
 """
-from zope.i18nmessageid import MessageIDFactory
+from zope.i18nmessageid import MessageFactory
 
-translate = MessageIDFactory('silva_poll')
-
+translate = MessageFactory('silva_poll')
