@@ -48,9 +48,11 @@ try:
     model.manage_addProduct['SilvaPoll'].manage_addPollQuestion(
                                           id, title, question, answers)
 except ValueError, e:
-    message=_('Problem: ${problem}')
-    message.set_mapping({'errors':context.render_form_errors(e)})
-    return view.add_form(message_type="error", message=unicode(message))
+    message = _('Problem: ${problem}',
+        mapping={'problem': context.render_form_errors(e)})
+    message = translate(message)
+    return view.add_form(message_type="error", message=message)
+
 object = getattr(model, id)
 
 # update last author info in new object
@@ -63,10 +65,8 @@ if lookup_mode:
 if REQUEST.has_key('add_edit_submit'):
     REQUEST.RESPONSE.redirect(object.absolute_url() + '/edit/tab_edit')
 else:
-    message = _("Added ${meta_type} ${id}.")
-    message.set_mapping({
-        'meta_type': object.meta_type,
-        'id': view.quotify(id)})
+    message = _('Added ${meta_type} ${id}.',
+        mapping={'meta_type': object.meta_type, 'id': view.quotify(id)})
     message = translate(message)
     return view.tab_edit(
         message_type="feedback",
